--20130208
ALTER TABLE producto ALTER COLUMN costo_compra TYPE numeric(12,4);
ALTER TABLE producto ALTER COLUMN precio_venta TYPE numeric(12,4);
alter table cliente add column limite_ctacte numeric(12,0) not null default 0;
alter table proveedor add column limite_ctacte numeric(12,0) not null default 0;
alter table movimiento_concepto add column ingreso boolean not null default true;
--20130204
ALTER TABLE detalle_venta ALTER COLUMN descuento TYPE numeric(12,4);
ALTER TABLE detalle_venta ALTER COLUMN precio_unitario TYPE numeric(12,4);
--20130123
CREATE TABLE credito_proveedor (
  id serial NOT NULL,
  proveedor_id integer NOT NULL,
  debe boolean NOT NULL,
  importe numeric(12,2) NOT NULL,
  concepto character varying(200) NOT NULL,
  fecha_carga timestamp with time zone NOT NULL DEFAULT now(),
  PRIMARY KEY (id ),
  FOREIGN KEY (proveedor_id) REFERENCES proveedor (id) MATCH SIMPLE ON UPDATE NO ACTION ON DELETE NO ACTION
) WITH ( OIDS=FALSE );
--20121219
ALTER TABLE subcuenta DROP CONSTRAINT subcuenta_nombre_key;
ALTER TABLE subcuenta ADD UNIQUE (cuenta_id, nombre);
--20121217
ALTER TABLE factura_compra ALTER COLUMN factura_octeto DROP NOT NULL;
ALTER TABLE factura_compra ALTER COLUMN factura_cuarto DROP NOT NULL;
ALTER TABLE factura_venta ADD COLUMN observacion character(100);
ALTER TABLE factura_compra ADD COLUMN observacion character(100);
CREATE TABLE usuario_acciones (
  id serial NOT NULL,
  usuario_id integer NOT NULL,
  descripcion character(200) NOT NULL,
  detalle character(2000),
  fechasistema timestamp with time zone NOT NULL DEFAULT now(),
  ip character(24),
  hostname character(50),
  entidad character(100) NOT NULL,
  entidad_id integer NOT NULL,
  CONSTRAINT usuario_acciones_pkey PRIMARY KEY (id),
  CONSTRAINT usuario_acciones_usuarios_id_fkey FOREIGN KEY (usuario_id)
      REFERENCES usuario (id) MATCH SIMPLE
      ON UPDATE NO ACTION ON DELETE NO ACTION
) WITH (  OIDS=FALSE);

ALTER TABLE factura_compra ADD COLUMN unidad_de_negocio_id integer;